--- a/Style.css
+++ b/Style.css
@@ -1,1 +1,29 @@
-
+p {
+  color:blue;
+  color:blue;
+}
+ ul {
+  color:LightBlue;
+  height:70px;
+}
+ol {
+  width:20px;
+  font-size: 16pt;
+}
+h1 {
+  font-weight:bold870;
+  font-family:Ariel;
+}
+header {
+  background-color: lightgreen;
+  font-weight:bold700
+}
+body {
+  height:100px;
+  font-size:50pt
+}
+footer {
+  width:30px;
+  color:#b5c4a9;
+}
+    
